# fcp-math

./: README.md  pyproject.toml
src/fcp_math/: arithmetic.py
