[project]
name = "fcp-math"
version = "0.0.2"
authors = [
  { name="Sugil Steve Lee", email="sugilmath@gmail.com" },
]
description = "Arithmetic operations and FPS conversions done clean in a FCP-native way."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "GPL-3.0-or-later"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/leesugil/fcp-math"
Issues = "https://github.com/leesugil/fcp-math/issues"

[project.scripts]
